<resources>
    <string name="app_name">Music Player</string>
    <string name="title_audio_book">Audiobooks</string>
    <string name="title_ringtone_cutter">Ringtone Cutter</string>
    <string name="title_genres">Genres</string>
    <string name="title_theme">Theme</string>
    <string name="title_sleep_timer">Sleep Timer</string>
    <string name="title_setting">Setting</string>
    <string name="title_equalizer">Equalizer</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_songs">Songs</string>
    <string name="title_artist">Artist</string>
    <string name="title_album">Album</string>
    <string name="title_folder">Folder</string>

    <!--menu item -->
    <string name="title_search_item">Search</string>
    <string name="title_voice_item">Voice</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="equalizer">Equalizer</string>
    <string name="sort_by">Sort by</string>
    <string name="sufftle">Sufftle</string>
    <string name="add_to_home_screen">Add to Home screen</string>

    <!-- popup create, edit playlist -->
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_btn_create">Create New</string>
    <string name="text_name_playlist">Name:</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- song fragment -->
    <string name="one_dot">•</string>
    <string name="permission_necessary">Permissin is necessary!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="not_have_permission">You don\'t have permission</string>

    <!-- common -->
    <string name="tracks">tracks</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="not_found_song">No songs found</string>
    <string name="all_song_already">All songs already exist in playlist </string>
    <string name="done">Done</string>
    <string name="added_to_queue">%d songs added to queue</string>
    <string name="set_ringtone_success">Set as Ringtone Successfully</string>

    <!-- play song fragment -->
    <string name="suffle_on">Suffle on</string>
    <string name="suffle_off">Suffle off</string>
    <string name="repeat_one">Repeat this song</string>
    <string name="repeat_all">Repeat all song</string>
    <string name="repeat_off">Repeat all off</string>
    <string name="creat_new_playlist_success">Creat new Playlist success</string>
    <string name="create_playlist_fail">Create fail, please try again</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="song_exists">Song already exist in playlist</string>

    <!-- menu item -->
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="delete">Delete</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="add_song">Add song</string>
    <string name="add_to_playlist_menu">Add to Playlist</string>
    <string name="go_to_album">Go to Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="set_as_ringtone">Set as Ringtone</string>

    <!-- add song fragment -->
    <string name="title_toolbar_add_songs">Add Songs</string>
    <string name="added_one_song">%d song added to playlist</string>
    <string name="added_multi_song">%d songs added to playlist</string>
    <string name="channel_name">music_player</string>
    <string name="channel_description">music_player</string>

    <!-- equalizer fragment -->
    <string name="frequency_header">%d Hz</string>
    <string name="frequency_lower">%d dB</string>
    <string name="frequency_upper">%d dB</string>

</resources>
