<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/background_popup_create_playlist">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_popup_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/color_popup_create_playlist"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/create_new_playlist"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/_20ssp"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/color_popup_create_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popup_title"
            android:gravity="center"
            />

    <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            android:layout_marginEnd="@dimen/_10sdp"
            android:id="@+id/edt_name_playlist"
            />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancle_playlist"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/edt_name_playlist"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            android:drawableTint="@color/color_popup_create_playlist"
            android:text="@string/text_btn_cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/color_popup_create_playlist"
            android:background="@drawable/backgournd_button_cancel_playlist"
            android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"/>

    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="@id/btn_cancle_playlist"
            app:layout_constraintBottom_toBottomOf="@+id/btn_cancle_playlist"
            app:layout_constraintStart_toEndOf="@id/btn_cancle_playlist"
            app:layout_constraintEnd_toEndOf="@id/edt_name_playlist"
            android:text="@string/text_btn_create"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:textColor="@color/color_text"
            android:drawableStart="@drawable/ic_done_white"
            android:background="@drawable/background_button_create_new"
            />


</androidx.constraintlayout.widget.ConstraintLayout>